# ai-brief

./: .gitignore  README.md  config.example.yaml  pyproject.toml  test_api.py
.context/: d-obsidian-obsidian-vault-clippings-ai-twinkly-widget.md
.github/workflows/: daily.yml
.trae/specs/ai-brief-production-line/: checklist.md  spec.md  tasks.md
config/: sources.yaml
src/ai_brief/: __init__.py  __main__.py  cli.py  config.py
src/ai_brief/collect/: __init__.py  github.py  rss.py
src/ai_brief/publish/: __init__.py  github.py  rss.py  site.py
src/ai_brief/publish/templates/: index.html
src/ai_brief/render/: __init__.py  card.py  screenshot.py  tts.py  video.py
tests/: test_build.py  test_collect.py  test_render.py
