[project]
name = "ai-brief"
version = "0.1.0"
description = "AI 早报自动生产线 - 自动采集、生成、发布"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.4",
    "playwright>=1.44.0",
    "openai>=1.30.0",
    "python-dateutil>=2.9.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.0",
]

[project.scripts]
ai-brief = "ai_brief.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
